# array-analyse

./: .gitignore  Analyse.hs  Indices.hs  Makefile  Model.agda  Neighbour.hs  README.md  Results.hs  Study.hs  array-analysis-per-directory.sh  array-analysis-per-file.sh  array-analysis.cabal  array17.tex  consistency.tex  corpus-status  corpussize.tex  countCorpusLines.py  infer-output-july3.txt  infer-output-july6.txt  july4_1730_output.txt  july4_2313_output.txt  model.tex  new-intro.tex  paper.tex  proof.tex  references.bib  region-model.tex  resultsToTex.py  spatial-model.tex  stack.yaml  stencil-analysis.cabal  supplement.tex  todo
oopsla17/: Makefile  Model.thy  algorithms.tex  analysis-2017.txt  appendix.tex  conclusions.tex  evaluation.tex  inference.tex  introduction.tex  lang.tex  lattice-model.tex  model.tex  oopsla17.tex  paper.tex  proofs.tex  references.bib  related-work.tex  resultsCmds.tex  resultsToTex.py  stencilmacros.sty  study.tex  studyResults.tex  theory.tex  todo
oopsla17/analysis/: Analyse.hs  Indices.hs  Neighbour.hs  Results.hs  Study.hs  stencil-analysis.cabal
oopsla17/analysis/tmp/: tmp.f90
src/: Analyse.hs  Indices.hs  Main.hs  Neighbour.hs  Results.hs  Study.hs
test/: test.f90
