name:                array-analysis
version:             0.1.0.0
synopsis:            Analyse array computation patterns in Fortran code
description:         Built on the CamFort framework
homepage:            https://github.com/camfort/array-analysis
license:             Apache-2.0
author:              Dominic Orchard
maintainer:          d.a.orchard@kent.ac.uk
copyright:           2017 University of Kent
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/camfort/array-analysis

executable array-analysis
  main-is:             Main.hs
  other-modules:       Indices,
                       Analyse,
                       Neighbour,
                       Results
  build-depends:       base >=4.9 && <4.10,
                       camfort >= 0.903,
                       fortran-src >= 0.1.0.6,
                       containers >= 0.5.7.1,
                       uniplate >= 1.6.12,
                       mtl >= 2.2.1,
                       fgl >= 5.5.3,
                       directory >= 1.3,
                       strict >= 0.3.2,
                       deepseq >= 1.4,
                       process >= 1.4.3.0, 
                       bytestring >= 0.10
  hs-source-dirs:      src
  default-language:    Haskell2010

executable study
  main-is:             Study.hs
  other-modules:       Indices,
                       Analyse,
                       Neighbour,
                       Results
  build-depends:       base >=4.9 && <4.10,
                       camfort >= 0.903,
                       fortran-src >= 0.1.0.6,
                       containers >= 0.5.7.1,
                       uniplate >= 1.6.12,
                       mtl >= 2.2.1,
                       fgl >= 5.5.3,
                       directory >= 1.3,
                       strict >= 0.3.2,
                       deepseq >= 1.4,
                       process >= 1.4.3.0, 
                       bytestring >= 0.10
  hs-source-dirs:      src
  default-language:    Haskell2010